# lemma

./: .cursorrules  .dockerignore  .env.example  .envrc.example  .gitignore  AGENT_STATE.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  env.example  pyproject.toml  validator.py
.github/workflows/: ci.yml  docker-publish.yml  docker.yml
bounties/: registry.json
compose/: lean.Dockerfile
contracts/: README.md  hardhat.config.js  package.json
contracts/contracts/: LemmaBountyEscrow.sol
contracts/scripts/: deploy.js  export-abi.js
contracts/test/: LemmaBountyEscrow.js
deploy/nginx/: lemma-live.conf
deploy/scripts/: lemma-refresh-public-dashboard
deploy/systemd/: lemma-live-publisher.service  lemma-live-publisher.timer  lemma-public-dashboard.path  lemma-public-dashboard.service  lemma-public-dashboard.timer  lemma-validator.service
docs/: ARCHITECTURE.md  CATALOG_SOURCES.md  COMPARATOR.md  FAQ.md  GENERATED_PROBLEMS.md  GETTING_STARTED.md  GOVERNANCE.md  MINER.md  MODELS.md  PRODUCTION.md  SYSTEM_REQUIREMENTS.md  TESTING.md  VALIDATOR.md  VISION.md  architecture.md  audit-remediation-handoff.md  audit-remediation.md  bounties.md  catalog-sources.md  codex-audit.md  commit-reveal.md  comparator.md  credibility-exponent-decision.md  cursor-audit.md  droplet-operations.md  faq.md  formal-conjectures.md  generated-problems.md  getting-started.md  governance.md  incentive-roadmap.md  incentive_migration.md  judge-incentive-decision.md  judge-profile-attest.md  litepaper.md  miner-dashboard.md  miner-verify-attest.md  miner.md  models.md  objective-decision.md  (+28 more)
examples/: legacy_subnet_burn_validator.py  local_loop.py  sdk.py
knowledge/: INDEX.yaml  adversarial_red_blue.yaml  basilica.containers.yaml  bittensor.core.yaml  btcli.reference.yaml  capacity_market.yaml  chutes.integration.yaml  compute_auction.yaml  container_execution.yaml  data_indexing.yaml  design_flow.yaml  external_activity_verification.yaml  incentive.primitives.yaml  local.development.yaml  miner.contract.yaml  miner.rules.yaml  ops.principles.yaml  prediction_market.yaml  sdk.quick_reference.yaml  subnet.invariants.yaml  subnet.lifecycle.yaml  sybil.realities.yaml  time_series_forecasting.yaml  trust.assumptions.yaml  validator.contract.yaml  validator.rules.yaml
lemma/: __init__.py  cadence.py  commitments.py  dashboard.py  formal_campaigns.py  formal_conjectures_campaigns.json  ledger.py  lifecycle.py  portal.py  protocol.py  protocol_attest.py  protocol_commit_reveal.py  submissions.py  wta.py
lemma/bounty/: __init__.py  client.py  escrow.py
lemma/catalog/: __init__.py  constants.py  formalmath.py  json_merge.py  loose_scan.py  mathlib_sample.py  minif2f_parse.py  putnam.py
lemma/cli/: __init__.py  doctor.py  env_file.py  env_paths.py  env_wizard.py  glossary.py  interactive_venv_shell.py  judge_hints.py  leaderboard_cmd.py  main.py  miner_menu.py  miner_observability.py  open_help.py  preview.py  problem_views.py  start_screen.py  style.py  try_prover.py  uv_bootstrap.py  validator_check.py  validator_config.py  validator_menu.py
lemma/common/: async_llm_retry.py  block_deadline.py  config.py  env_file.py  logging.py  problem_seed.py  split_timeout.py  subtensor.py  synapse_limits.py  uids.py
lemma/judge/: __init__.py  anthropic_judge.py  base.py  fake.py  fingerprint.py  json_util.py  one_shot.py  openai_judge.py  profile.py  prompt_sanitize.py  prompts.py
lemma/lean/: __init__.py  cheats.py  comparator_hook.py  problem_codec.py  proof_metrics.py  sandbox.py  submission_policy.py  verify_runner.py  worker_http.py  workspace.py
lemma/miner/: __init__.py  answer_notify.py  daily_budget.py  forward.py  gating.py  limits.py  model_card.py  prover.py  public_ip.py  service.py
lemma/problems/: __init__.py  base.py  factory.py  (+8 more)
scripts/: build_lemma_catalog.py  ci_verify_generated_templates.py  dev-lean-warm.sh  lemma-run  load_minif2f.py  prebuild_lean_image.sh  start_lean_docker_worker.sh  training_export_upload_example.sh
tests/: test_axiom_classify.py  test_block_deadline.py  test_bounty_cli.py  test_bounty_escrow.py  test_canonical_judge.py  test_catalog_parse.py  test_cheats.py  test_cheats_axioms.py  test_cli_moved_commands.py  test_cli_surface.py  test_commitments.py  test_comparator_hook.py  test_daily_budget.py  test_dashboard.py  test_dashboard_refresh_script.py  test_docker_golden.py  test_docker_worker_path.py  test_env_file.py  test_env_wizard_gemini.py  test_formal_campaigns.py  test_generated_source.py  test_generated_template_gate.py  test_hybrid_source.py  test_json_merge.py  test_judge_json.py  test_judge_openai_resolution.py  test_judge_profile.py  test_judge_profile_attest.py  test_known_theorems.py  test_lake_cache_warm_skip.py  test_lean_num_threads.py  test_lean_worker_bind.py  test_lifecycle.py  test_miner_commit_reveal.py  test_miner_forward.py  test_miner_gating.py  test_miner_limits.py  test_ops_dashboard.py  test_optional_deps.py  test_pareto.py  (+52 more)
tools/: __init__.py  ops_dashboard.py  proof_metrics_analyze.py  public_dashboard.py  sybil_replay_analyze.py
(+28 files in other folders)
