[project]
name = "lemma"
version = "0.1.0"
description = "Lemma: winner-take-all Bittensor subnet for Lean theorem proving"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Lemma subnet contributors" }]
dependencies = [
    "bittensor==10.3.0",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "loguru>=0.7,<1",
    "click>=8.1,<9",
    "docker>=7.1,<8",
]

[project.optional-dependencies]
btcli = [
    "bittensor[cli]==10.3.0",
]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.0,<2",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "types-docker>=7.1,<8",
]

[project.scripts]
lemma = "lemma.cli.main:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lemma"]

[tool.uv]
constraint-dependencies = [
    "urllib3>=2.7.0",
    "pygments>=2.20.0",
    "wheel>=0.46.2",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["lemma", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Re-exec under `uv run` must run before other imports (keeps bittensor off the wrong interpreter).
"lemma/cli/main.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
packages = ["lemma"]
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "docker: tests that require Docker and the lean-sandbox image",
]
